force-app/main/default/objects/Stock__c/fields/Capital__c.field-meta.xml
<CustomField>
    <fullName>Capital__c</fullName>
    <label>Capital</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Micro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>