force-app/main/default/objects/Stock__c/fields/Exchange__c.field-meta.xml
<CustomField>
    <fullName>Exchange__c</fullName>
    <label>Exchange</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NSE</fullName>
                <default>true</default>
                <label>NSE</label>
            </value>
            <value>
                <fullName>BSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>