force-app/main/default/objects/Stock__c/fields/Latest_Stock_Price__c.field-meta.xml
<CustomField>
    <fullName>Latest_Stock_Price__c</fullName>
    <label>Latest Stock Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>