force-app/main/default/objects/Stock__c/fields/P_L__c.field-meta.xml
<CustomField>
    <fullName>P_L__c</fullName>
    <formula>Investment_Value__c - Total_Invested_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P/L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>