force-app/main/default/objects/Stock__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agri</fullName>
            </value>
            <value>
                <fullName>Alcohol</fullName>
            </value>
            <value>
                <fullName>Automobile &amp; Ancillaries</fullName>
            </value>
            <value>
                <fullName>Aviation</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Capital Goods</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Construction Materials</fullName>
            </value>
            <value>
                <fullName>Consumer Durables</fullName>
            </value>
            <value>
                <fullName>Containers &amp; Packaging</fullName>
            </value>
            <value>
                <fullName>Diamond &amp; Jewellery</fullName>
            </value>
            <value>
                <fullName>Diversified</fullName>
            </value>
            <value>
                <fullName>Electricals</fullName>
            </value>
            <value>
                <fullName>ETF</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Financew</fullName>
            </value>
            <value>
                <fullName>FMCG</fullName>
            </value>
            <value>
                <fullName>Footwear</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Industrial Gases &amp; Fuels</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Media &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Metals &amp; Mining</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>