force-app/main/default/objects/Stock__c/fields/Ticker_Code__c.field-meta.xml
<CustomField>
    <fullName>Ticker_Code__c</fullName>
    <label>Ticker Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>