force-app/main/default/objects/Stock__c/fields/Total_Invested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Invested_Amount__c</fullName>
    <label>Total Invested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>