force-app/main/default/objects/Stock__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Investment_Value__c</columns>
    <columns>Latest_Stock_Price__c</columns>
    <columns>P_L__c</columns>
    <columns>Ticker_Code__c</columns>
    <columns>Sector__c</columns>
    <columns>Total_Invested_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>